--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.3",
     "@astrojs/solid-js": "^4.4.1",
+    "@astrojs/vercel": "^7.8.1",
     "astro": "^4.15.4",
     "solid-js": "^1.8.22",
     "typescript": "^5.6.2"
