--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@astrojs/check": "^0.9.3",
     "@astrojs/solid-js": "^4.4.1",
+    "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.8.1",
     "astro": "^4.15.4",
     "solid-js": "^1.8.22",
+    "tailwindcss": "^3.4.11",
     "typescript": "^5.6.2"
   },
   "devDependencies": {
     "prettier": "^3.3.3",
-    "prettier-plugin-astro": "^0.14.1"
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.6"
   }
 }
